--- a/_posts/TodayILearned/2020-03-16-TIL.md
+++ b/_posts/TodayILearned/2020-03-16-TIL.md
@@ -21,8 +21,8 @@ tags: [ TIL ]
 ### 느낀점 및 생각
 * C++에 있던 QT GUI 라이브러리가 파이썬에도 거의 똑같이 있어서 사용해보았는데 역시 UI를 구성하는건 노가다다. 특히 어떤 구성요소가 있는지 모를 때는 더욱 ㅠㅠ
 * 이 [유튜브 채널](https://www.youtube.com/user/AngeloYeo)이 회로(페이저) 개념 복습에 도움이 되었다. 여러가지 수학적 개념도 짚는 영상들이 있어서 좋았다. 영상들 쭉 정주행 해야겠다.
-* 정말 간만에 대학 수업을 들었는데... 생각 이상으로 전자쪽으로 내 수준이 많이 낮은 것 같다. 본 전공을 살리려면 부단히 노력해야 할듯
-* 자주 쓰는 공학 영어단어들을 정리하면 좋을듯
+* 정말 간만에 대학 수업을 들었는데... 전자쪽으론 내 수준이 많이 낮은 것 같다. 본 전공을 살리려면 부단히 노력해야 할듯
+* 자주 쓰는 공학 영어 단어들을 정리하면 좋을듯
 * 삼각함수 공식들도 다시 암기하자
 
 <br>
