--- a/_posts/TodayILearned/2020-04-10-TIL.md
+++ b/_posts/TodayILearned/2020-04-10-TIL.md
@@ -20,7 +20,7 @@ tags: [ TIL ]
 ### 느낀점 및 생각
 * 최근 자바스크립트나 파이썬, 자바 등 여러가지 언어들을 접해볼 기회가 많았는데 작성하는데 고생하긴 해도 C만큼 코드 그대로 동작하는 언어가 없는 것 같기도 하다. 내부적으로 별도의 처리 없이 딱 내가 생각한대로만 동작한다고 해야하나? 동작이 참 단순하단걸 느낀다. 뭐 그만큼 복잡한 작업을 하기 위해선 프로그래머가 고생해야 하겠지만 ㅎㅎ
 
-* 4개월 가까이 달려온 POCU Academy COMP2200 코스가 이제 기말고사만 남았다. 실습, 과제, 중간, 기말 합쳐 85점 이상의 점수를 받지 못하면 F라는 황당한(?) 평가 기준을 가지고 있는데 본인이 현재 85점의 마지노선에 걸쳐있음에도 상위 13%에 위치하고 있다. 기말이 쉽게 나온다 쳐도 2~30% 아래는 다 낙제생이라는 이야기인데... 시작할 땐 이렇게 빡빡한 기준이라곤 생각치 못했던 것 같다. 그래도 6,70점만 맞은 사람이라도 얻어가는게 많은 코스임은 분명하다. 단 4개월만에 식견이 꽤 넓어진걸 보면 말이다. 여튼 빡시게 공부해서 낙제되지만 않도록 해야겠다!!
+* 4개월 가까이 달려온 POCU Academy COMP2200 코스가 이제 기말고사만 남았다. 실습, 과제, 중간, 기말 합쳐 85점 이상의 점수를 받지 못하면 F라는 황당한(?) 평가 기준을 가지고 있는데 본인이 현재 85점의 마지노선에 걸쳐있음에도 상위 25%에 위치하고 있다. 기말이 쉽게 나온다 쳐도 4~50% 아래는 다 낙제생이라는 이야기인데... 시작할 땐 이렇게 빡빡한 기준이라곤 생각치 못했던 것 같다. 그래도 6,70점만 맞은 사람이라도 얻어가는게 많은 코스임은 분명하다. 단 4개월만에 식견이 꽤 넓어진걸 보면 말이다. 여튼 패스를 목표로 열심히 공부해야겠다!!
 
 * 수업을 듣고 과제를 하면서 이해가 된다고 생각했던 전공들이 (전자회로, 확랜) 슬슬 이해가 된게 맞는가 의심이 드는 시점이 왔다. 보통 이런 시점을 극복하지 못한 과목들은 대체로 성적이 낮았던걸 감안하면 해당 과목들에 힘을 실어줘야 하는 때인 것 같다. 소프트웨어 공부를 더 하고는 싶지만 전자과 과목들을 다 마무리 듣기 전까진 참아야지... 힘을 내보자
 
