comp2200 Review 작성

--- a/_posts/TodayILearned/2020-04-20-TIL.md
+++ b/_posts/TodayILearned/2020-04-20-TIL.md
@@ -19,9 +19,9 @@ tags: [ TIL ]
 
 * 스터디원 모두 백엔드에 대한 경험이 없어서 강의 초반부에서 많이 해맸었다. 리액트 파트로 넘어온 지금은 좀 나은편. 다만 리액트를 배우기 위해 시작했는데 리액트 자체를 얼마나 자세히 배울 수 있는 강의인지는 잘 모르겠다. 리액트 자체는 따로 공부해야할 것 같은 느낌. 그래도 웹이 돌아가는 큰 틀을 배우는데는 도움이 되는 것 같아 나쁘진 않다.
 
-* COMP2200 기말고사 점수가 나왔다. 결과는 87점! 중간고사에 비해 16점이나 올랐다. 덕분에 거뜬하게 패스~ 프로그래밍을 짧게 한 것도 아닌데 F 받으면 어쩌나 걱정했는데 다행이다 ^&^
+* COMP2200 기말고사 점수가 나왔다. 결과는 87점! 중간고사에 비해 16점이나 올랐다. 덕분에 거뜬하게 패스~ 프로그래밍을 짧게 한 것도 아닌데 F 받으면 어쩌나 걱정했는데 다행 ^&^
 
-* COMP2500 수강신청 열린지 6시간도 안지났는데 자리가 20자리도 안남았었다. 강사님이 자리는 얼마든지 확보할 수 있다고 하긴 했으나 수요가 많은 강의였다는건 확실한 것 같다. 자바 안다룬지 몇 년이 지났는데 잘 할 수 있을까 모르겠다. 근 4년은 C#만 조금 깨작인 정도인데 ㅋㅋ... 학기가 시작되기 전에 미리미리 공부해둬야겠다.
+* COMP2500 수강신청 열린지 6시간도 안지났는데 자리가 20자리도 안남아있었다. 강사님이 자리는 얼마든지 확보할 수 있다고 하긴 했으나 수요가 많은 강의인건 분명한 것 같다. 자바 안다룬지 몇 년이 지났는데 잘 할 수 있을까 모르겠네. 근 4년은 C#만 조금 깨작인 정도인데 ㅋㅋ... 아무튼 학기가 시작되기 전에 미리미리 공부해둬야겠다.
 
 <br>
 
