--- a/_posts/TodayILearned/2020-04-25-TIL.md
+++ b/_posts/TodayILearned/2020-04-25-TIL.md
@@ -7,7 +7,7 @@ tags: [ TIL ]
 ---
 
 ### Today I Learned
-* POCU Academy Com2200 수강 후기를 작성했다. 이 블로그의 첫 장문 포스팅인 것 같은데 쓰고 싶은 것 이것저것 다 쓰다보니 생각보다 많이 길어졌다. 그렇다고 쓰고 싶던 것을 다 쓴 것도 아니고 ㅠㅠ. 뭐 아무튼 후기까지 열심히 쓸 열정을 불어넣어준 강의였던건 분명한 것 같다. Comp2500도 열심히 들어야지
+* POCU Academy Com2200 수강 후기를 작성했다. 이 블로그의 첫 장문 포스팅인 것 같은데 쓰고 싶은 것 이것저것 다 쓰다보니 생각보다 많이 길어졌다. 그렇다고 쓰고 싶던 것을 다 쓴 것도 아니고 ㅠㅠ. 뭐 아무튼 후기까지 열심히 쓸 열정을 불어넣어준 강의였던건 분명한 것 같다. 덕분에 새로운 마크다운 문법도 많이 써볼 수 있졌고. Comp2500도 열심히 들어야지
 * Jekyll 블로그에 새로운 layout을 만들어서 파이썬 과외 수업용 페이지를 따로 만들었다. 그동안 카톡 게시판을 사용하여 숙제를 내거나 자료를 공유했는데 여러모로 불편한 점이 많았기 때문이다. 내 블로그 링크와 마크다운 문법을 통한 문서작성 기능은 그대로 사용하면서 블로그랑 구별된 페이지를 만들고 싶었다.(링크를 조작하지 않는 이상 서로 왔다갔다 할 수 없도록)   
 Jekyll 구조나 사용하는 변수들이 안떠올라서 잠깐 멍 했지만 하다보니 또 됐다. default 레이아웃에서 header와 fotter를 빼버리고, 별도의 포스트들이 home 에서도 보이지 않도록, 검색엔진 크롤링에 끌려가지 않도록 짤막한 코드들도 추가했다.
 * 간만에 Jekyll 블로그를 만지면서 도저히 구문 강조 색조합이 마음에 들지 않아서 이걸 다른걸로 교체해보려 시도 했는데 죄다 실패했다. 새로운 구문 강조를 적용하면 기존 테마랑 겹쳐서 뭔가 나사 하나 빠진듯 적용되었다. 결국 다 롤백... 나중에 다시 살펴봐야겠다.
