짜잘한 수정

--- a/_posts/chitchat/2020-08-25-COMP2500_Review.md
+++ b/_posts/chitchat/2020-08-25-COMP2500_Review.md
@@ -30,7 +30,7 @@ tags: [ POCU Academy, Java ]
 
 이번 학기는 대학 정규 학기를 같이 진행하며 풀코스를 듣느라 시간이 부족하고 많이 힘들었다. 동영상 강의가 밀려 뒤늦게 후다닥 본 파트도 있었고 과제도 막판에야 겨우겨우 제출하고 그랬다. 아마 코로나 사태로 대학 수업이 비대면 강의로 대체되지 않았으면 학교만 왕복 4시간이니 풀코스를 따라가는게 힘들지 않았을까 싶다.   
 하지만 결과적으로 본인이 많이 성장한 것이 느껴진다. 고작 두 과목 밖에 안들었으면서 이런말을 하는게 웃기지만 8개월간 수강하면서 얻은 지식과 기술들이 개인 작업물의 코드나 팀 프로젝트의 작업물에서 묻어나온다. 뭔가를 남들에게 가르쳐 줄 때도 보다 명확하게 알려줄 수 있게 되었다. 전체적인 식견이 넓어졌다 해야하나? 뭐 자만할 수준은 절대 아니지만 ㅎㅎ...   
-본인은 다음 학기엔 COMP3200 C++ 언매니지드 프로그래밍 과목을 이어서 수강할 예정이다.
+아무튼 저는 다음 학기에 또 COMP3200 C++ 언매니지드 프로그래밍 과목을 이어서 수강할 예정이랍니다~
 
 
 ### 끝
