TIL 대신 공부일기란 카테고리로 변경

--- a/_posts/TodayILearned/2020-03-08-TIL.md
+++ b/_posts/TodayILearned/2020-03-08-TIL.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title:  "200308 - TIL"
+title:  "200308"
 date:   2020-03-08 14:00:00 +9000
-category: [ TIL(Today I Learned) ]
-tags: [ TIL ]
+category: [ 공부일기 ]
+tags: [ 공부일기 ]
 ---
 
 ### Today I Learned
