--- a/_posts/TodayILearned/2020-04-10-TIL.md
+++ b/_posts/TodayILearned/2020-04-10-TIL.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title:  "200410 - WIL"
+title:  "200410"
 date:   2020-04-10 14:00:00 +9000
-category: [ TIL(Today I Learned) ]
-tags: [ TIL ]
+category: [ 공부일기 ]
+tags: [ 공부일기 ]
 ---
 
 근 몇 주동안 제대로 TIL을 진행하지 않았기 때문에 그동안 내가 공부한 것으로 하여 What I Learned로 퉁칠 것이다.
