--- a/_posts/TodayILearned/2020-03-03-TIL.md
+++ b/_posts/TodayILearned/2020-03-03-TIL.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title:  "200303 - TIL"
+title:  "200303"
 date:   2020-03-03 14:00:00 +9000
-category: [ TIL(Today I Learned) ]
-tags: [ TIL ]
+category: [ 공부일기 ]
+tags: [ 공부일기 ]
 ---
 
 ### Today I Learned
