--- a/_posts/TodayILearned/2020-04-19-TIL.md
+++ b/_posts/TodayILearned/2020-04-19-TIL.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title:  "200419 - WIL"
+title:  "200419"
 date:   2020-04-19 14:00:00 +9000
-category: [ TIL(Today I Learned) ]
-tags: [ TIL ]
+category: [ 공부일기 ]
+tags: [ 공부일기 ]
 ---
 
 계속되는 WIL... 그래도 꾸준히 하고 있다는 것에 의의를 두자.
