--- a/_posts/Education/2020-03-11-TIL.md
+++ b/_posts/Education/2020-03-11-TIL.md
@@ -2,7 +2,7 @@
 layout: edu
 title:  "200311"
 date:   2020-03-11 14:00:00 +9000
-category: [ 공부일기 ]
+category: [ Education ]
 tags: [ 공부일기 ]
 ---
 
