게시글수정

--- a/_posts/Algorithm/2021-01-11-BOJ10835.md
+++ b/_posts/Algorithm/2021-01-11-BOJ10835.md
@@ -7,7 +7,7 @@ tags: [ 알고리즘, 백준 ]
 ---
 
 [문제 링크](https://www.acmicpc.net/problem/10835)
->> KOI 2015 기출문제
+> KOI 2015 기출문제
 
 ---
 
@@ -22,7 +22,7 @@ tags: [ 알고리즘, 백준 ]
 
 얻을 수 있는 최종 점수의 최댓값을 출력한다.
 
->> 자세한 예시와 입출력 양식은 문제 링크 참조
+> 자세한 예시와 입출력 양식은 문제 링크 참조
 
 ---
 
