게시글수정

--- a/_posts/Algorithm/2021-01-12-BOJ17225.md
+++ b/_posts/Algorithm/2021-01-12-BOJ17225.md
@@ -23,7 +23,7 @@ tags: [ 알고리즘, 백준, APC ]
 #### 입력
 첫 줄에 상민이가 선물 하나를 포장하는 데 걸리는 시간 A, 지수가 선물 하나를 포장하는 데 걸리는 시간 B, 어제 세훈이 가게의 손님 수 N(1 ≤ N ≤ 1,000)이 주어진다.
 
-이후 N개의 줄에 걸쳐 1번부터 N번 손님의 주문 시각 $$t_i$$(1 ≤ $$t_i$$ ≤ 86,400), 선택한 포장지의 색깔 $$c_i$$($$c_i$$ = "B"|"R"), 주문한 선물의 개수 $$m_i$$(1 ≤ $$m_i$$ ≤ 100)가 주어진다.
+이후 N개의 줄에 걸쳐 1번부터 N번 손님의 주문 시각 $$t_i$$(1 ≤ $$t_i$$ ≤ 86,400), 선택한 포장지의 색깔 $$c_i$$($$c_i$$ = "B"&#124;"R"), 주문한 선물의 개수 $$m_i$$(1 ≤ $$m_i$$ ≤ 100)가 주어진다.
 
 $$t_i$$는 가게가 오픈한 지 $$t_i$$초 후에 손님이 주문했음을 뜻하며 $$c_i$$는 포장지의 색깔을 의미하는 알파벳으로 "B"는 파란색을, "R"은 빨간색을 의미한다. 주어지는 입력은 시간의 흐름에 맞게 $$t_i$$의 오름차순으로 주어지며, 서로 같은 시간에 주문한 손님은 없다.
 
