알고리즘문제풀이

--- a/_posts/Algorithm/2021-01-13-BOJ1764.md
+++ b/_posts/Algorithm/2021-01-13-BOJ1764.md
@@ -27,9 +27,9 @@ tags: [ 알고리즘, 백준 ]
 
 ## 접근 과정
 0. 질문 게시판에서 질문자가 자바로 풀고 있었길래 본인도 자바를 사용하여 풀었다.
-1. 두 개의 그룹이 있고 각 그룹에 공통된 요소가 있는지 찾는 문제였다. 이 때 듣지 못한 그룹과 본적 없는 그룹의 크기가 최대 $$5 \times 10^{5}$$만이므로 하나하나 비교하기 위해선 $$2.5 \times 10^{11}$$회의 연산이 필요하다. 이는 2초의 제한시간으론 부족해보였다.
-2. 따라서 O(n)보다 빠르게 요소를 탐색할 필요가 있었다. 풀고 다른사람들의 풀이를 봤을 떄 이분 탐색을 사용하였는데 본인은 O(1)의 속도로 요소가 있는지 확인할 수 있는 HashSet 클래스를 사용해봤다. 듣지 못한 그룹을 HashSet에 저장하고 보지 못한 그룹을 입력받을 때 HashSet에 동일한 이름이 있는지 찾는 방식으로 구현하였다.
-3. 처음에는 결과를 ArrayList에 저장하였으나 문제에 결과를 사전순으로 출력해야 한다는 조건이 있어 틀렸었다. 예제 입력은 사전순으로 주었으나 테스트케이스에선 아니었던 모양. Collections 클래스의 sort 메소드를 통해 해결할 수도 있지만 요소를 추가할 때 부터 자동으로 정렬되는 TreeSet 클래스를 사용하는 것으로 수정하였다. 두 방법 중 어떤게 더 속도가 빠를진 솔직히 잘 모르겠다.
+1. 두 개의 그룹이 있고 각 그룹에 공통된 요소가 있는지 찾는 문제였다. 이 때 듣지 못한 그룹과 보지 못한 그룹의 크기가 최대 $$5 \times 10^{5}$$이므로 하나하나 비교하기 위해선 $$2.5 \times 10^{11}$$회의 연산이 필요하다. 이는 2초의 제한시간으론 부족해보였다.
+2. 따라서 O(n)보다 빠르게 요소를 탐색할 필요가 있었다. 풀고 다른사람들의 풀이를 봤을 떄 이분 탐색을 사용하였는데 본인은 O(1)의 속도로 요소가 있는지 확인할 수 있는 HashSet 클래스를 사용해봤다. 듣지 못한 그룹을 HashSet에 저장하고 보지 못한 그룹을 입력받을 때 HashSet에 동일한 이름이 있는지 찾도록 구현하였다.
+3. 처음에는 결과를 ArrayList에 저장하였으나 문제에 결과를 사전순으로 출력해야 한다는 조건을 고려하지 않아 틀리고 말았다. 예제 입력은 사전순으로 주었으나 테스트케이스에선 아니었던 모양. Collections 클래스의 sort 메소드를 사용하거나 자동으로 정렬되는 TreeSet 클래스를 사용하여 해결할 수 있는데 본인은 TreeSet을 사용하였다. 두 방법 중 어떤게 더 속도가 빠를진 솔직히 잘 모르겠다.
 
 > C++ STL에도 동일한 동작의 자료구조 클래스들이 존재한다.   
 >  + HashSet -> std::unordered_map   
