알고리즘문제풀이

--- a/_posts/Algorithm/2021-01-15-BOJ1709.md
+++ b/_posts/Algorithm/2021-01-15-BOJ1709.md
@@ -25,7 +25,7 @@ tags: [ 알고리즘, 백준 ]
 
 ## 접근 과정
 1. 그래프를 그려주는 사이트에 가서 원 그래프를 그려보았다. N이 항상 짝수이기 때문에 각 사분면이 동일한 갯수의 타일의 원의 둘레가 그려지므로 한 사분면에서 원이 그려지는 타일의 갯수를 파악한 뒤 4를 곱해주기로 하였다.
-2. 1사분면에서 가장 왼쪽 아래 타일을 (1, 1)로 두었을 때(점의 좌표와 블럭의 좌표는 별개) 원점에서 좌측 하단 점 까지의 길이가 반지름 보다 짧고 우측 상단 까지의 길이가 반지름 보다 길면 원이 그려지므로 타일이 주어지면 원이 그려질 수 있는지 확인하는 함수를 작성하였다. * hasCircumference(x, y) *
+2. 1사분면에서 가장 왼쪽 아래 타일을 (1, 1)로 두었을 때(점의 좌표와 블럭의 좌표는 별개) 원점에서 좌측 하단 점 까지의 길이가 반지름 보다 짧고 우측 상단 까지의 길이가 반지름 보다 길면 원이 그려지므로 이를 통해 타일이 주어지면 원이 그려질 수 있는지 확인하는 함수를 작성하였다. * hasCircumference(x, y) *
 3. N의 최대치가 작지 않으니 한 사분면에 대해 완전 탐색하지 않고 별도로 탐색 경로를 따로 정해주었다. 원이 시작되는 꼭지점에서 끝나는 꼭지점을 향해 탐색하는 방향으로 탐색하는 식이다. 다른 사람들의 풀이들 또한 각자 나름대로의 탐색 방법을 사용하고 있었다.
 
 
