--- a/_posts/Algorithm/2021-01-16-BOJ1490.md
+++ b/_posts/Algorithm/2021-01-16-BOJ1490.md
@@ -24,9 +24,9 @@ tags: [ 알고리즘, 백준 ]
 ---
 
 ## 접근 과정
-1. 결과 값은 0을 제외한 모든 자릿수의 최소 공배수에 나누어 떨어진다. a와 b의 최소 공배수는 \[ $$a \times b / (최대공약수)$$ \]로 구할 수 있으며. 최대 공약수를 구하기 위해 [유클리드 호제법](https://ko.wikipedia.org/wiki/유클리드_호제법)을 사용한 함수 gcd()를 구현하였다.
+1. 결과 값은 0을 제외한 모든 자릿수의 최소 공배수에 나누어 떨어진다. a와 b의 최소 공배수는 \[ $$a \times b / (최대공약수)$$ \]로 구할 수 있으며.이를 위해 최대 공약수를 구하고자 [유클리드 호제법](https://ko.wikipedia.org/wiki/유클리드_호제법)을 이용한 gcd() 함수를 구현하였다.
 2. 이제 앞자리가 N으로 시작하는 모든 숫자에 대해 1번에서 구한 최소 공배수로 나눠서 확인해주면 된다. N에다 10씩 곱하고 N 부분이 변하지 않는 범위에서 확인해보고 범위를 넘어서면 다시 10을 곱하여 반복하는 식이다. 다른 사람들의 코드를 봤을 때 이렇게 전부 탐색 하더라도 시간초과 위험은 없어보였다.
-3. 그래도 본인은 약간의 최적화를 첨가했는데 $$N \times 10^k$$를 최대 공배수로 나눴을 떄 나머지가 $10^k$ 보다 크다면 현재 자릿수에서는 최대 공배수로 나누어 떨어지는 경우가 없으므로 다음 자릿수를 확인하는 방식이다.
+3. 그래도 본인은 약간의 최적화를 첨가했는데 $$N \times 10^k$$$를 최대 공배수로 나눴을 떄 나머지가 $10^k$ 보다 크다면 현재 자릿수에서는 최대 공배수로 나누어 떨어지는 경우가 없으므로 다음 자릿수를 확인하는 방식이다.
 
 
 # 소스 코드
