게시글 수정

--- a/_posts/Algorithm/2021-01-18-BOJ1577.md
+++ b/_posts/Algorithm/2021-01-18-BOJ1577.md
@@ -28,7 +28,7 @@ tags: [ 알고리즘, 백준 ]
 첫째 줄에 도로의 가로 크기 N과 세로 크기 M이 주어진다. N과 M은 100보다 작거나 같은 자연수이고, 둘째 줄에는 공사중인 도로의 개수 K가 주어진다. K는 0보다 크거나 같고, 100보다 작거나 같은 자연수이다. 셋째 줄부터 K개 줄에는 공사중인 도로의 정보가 a b c d와 같이 주어진다. a와 c는 0보다 크거나 같고, N보다 작거나 같은 자연수이고, b와 d는 0보다 크거나 같고, M보다 작거나 같은 자연수이다. 그리고, (a, b)와 (c, d)의 거리는 항상 1이다.
 
 ### 출력
-첫째 줄에 (0, 0)에서 (N, M)까지 가는 경우의 수를 출력한다. 이 값은 0보다 크거나 같고, $$2^63 - 1$$보다 작거나 같은 자연수이다.
+첫째 줄에 (0, 0)에서 (N, M)까지 가는 경우의 수를 출력한다. 이 값은 0보다 크거나 같고, $$2^(63) - 1$$보다 작거나 같은 자연수이다.
 
 ---
 
