--- a/_posts/Algorithm/2021-01-18-BOJ1577.md
+++ b/_posts/Algorithm/2021-01-18-BOJ1577.md
@@ -28,7 +28,7 @@ tags: [ 알고리즘, 백준 ]
 첫째 줄에 도로의 가로 크기 N과 세로 크기 M이 주어진다. N과 M은 100보다 작거나 같은 자연수이고, 둘째 줄에는 공사중인 도로의 개수 K가 주어진다. K는 0보다 크거나 같고, 100보다 작거나 같은 자연수이다. 셋째 줄부터 K개 줄에는 공사중인 도로의 정보가 a b c d와 같이 주어진다. a와 c는 0보다 크거나 같고, N보다 작거나 같은 자연수이고, b와 d는 0보다 크거나 같고, M보다 작거나 같은 자연수이다. 그리고, (a, b)와 (c, d)의 거리는 항상 1이다.
 
 ### 출력
-첫째 줄에 (0, 0)에서 (N, M)까지 가는 경우의 수를 출력한다. 이 값은 0보다 크거나 같고, $$2^(63) - 1$$보다 작거나 같은 자연수이다.
+첫째 줄에 (0, 0)에서 (N, M)까지 가는 경우의 수를 출력한다. 이 값은 0보다 크거나 같고, $$2^{63} - 1$$보다 작거나 같은 자연수이다.
 
 ---
 
@@ -36,7 +36,7 @@ tags: [ 알고리즘, 백준 ]
 1. (N, M)까지 가는 경로의 갯수를 세는 문제이다. 재귀호출을 통해 경로를 탐색하되 각 지점에서 (N, M) 까지 갈 수 있는 경우의 수를 기록하여 중복되는 탐색 경로가 생기지 않도록 구현하면 될 것 같았다. (*Dynamic Programming*)
 2. 여기서 고려해야 할 부분은 공사중인 경로로는 이동할 수 없다는 것이다. 이를 어떻게 저장하고 탐색중 확인할지 고민하였고 이동할 수 없는 방향에 대해 비트 플래그로 표시를 하는 것으로 정했는데 속도도 빠르고 코드도 깔끔해질 것 같았기 때문이다.
 3. N과 M이 커질수록 경로의 수가 많아지기 떄문에 오버플로우를 방지하기 위해 결과 값의 자료형을 long long으로 선언해주어야 한다. (메모이제이션 초기값이 -1이 아니라면 unsigned long을 사용해 메모리 효율을 높일 수도 있겠다.)   
-다 풀어놓고 함수 내 ret 변수를 int로 선언해두는 바람에 4번이나 틀리면서 이게 왜 안되는거지 하며 시간을 많이 낭비했다. 항상 오버플로우를 주의하자 ㅠㅠ
+다 풀어놓고 함수 내 ret 변수를 int형으로 선언하는 바람에 왜 틀리는지 몰라 시간을 많이 낭비했다. 항상 오버플로우를 주의하자 ㅠㅠ
 
 
 # 소스 코드
