--- a/_posts/Algorithm/2021-01-27-BOJ16566.md
+++ b/_posts/Algorithm/2021-01-27-BOJ16566.md
@@ -7,6 +7,7 @@ tags: [ 알고리즘, 백준 ]
 ---
 
 [문제 링크](https://www.acmicpc.net/problem/16566)
+> 서강대학교 2018 Sogang Programming Contest (Master) 기출문제
 
 <br>
 
