알고리즘문제풀이

--- a/_posts/Algorithm/2021-01-29-BOJ8892.md
+++ b/_posts/Algorithm/2021-01-29-BOJ8892.md
@@ -36,7 +36,7 @@ tags: [ 알고리즘, 백준 ]
 ## 접근 과정
 1. 특정 문자열이 팰린드롬인지 판별하기 위한 함수 *isPelindrome()*을 작성하였다.
 2. 처음엔 로직을 잘못 작성하면 시간초과가 날만한 문제라 생각했는데 합이 입력 단위가 생각보다 작았다. 최적화는 생각하지 않고 무작정 모든 경우의 수를 검사해도 시간이 충분하므로 입력받은 모든 단어들의 하나하나 조합하고 팰린드롬인지 검사하는 방식으로 구현하였다.
-3. 본 문제에서는 큰 영향이 없지만 *std::string* 이나 *std::vector* 등의 클래스에서 최대 길이가 정해져 있는 경우라면 *reserve()* 메소드를 호출하여 약간의 성능 이득을 취할 수 있다. *reserve()* 메소드는 자료구조 내부의 동적 메모리 공간을 미리 확보해두는 메소드로 길이가 증가함에 따라 발생하는 추가적인 메모리 동적할당을 막을 수 있다. 본 문제에서는 고작 4ms 빨라졌다 ㅋㅋ
+3. 본 문제에서는 큰 영향이 없지만 *std::string* 이나 *std::vector* 등의 클래스의 최대 길이가 정해져 있는 경우라면 *reserve()* 메소드를 호출하여 약간의 성능 이득을 취할 수 있다. *reserve()* 메소드는 자료구조 내부의 동적 메모리 공간을 미리 확보해두는 메소드로 길이가 증가함에 따라 발생하는 추가적인 메모리 동적할당을 막을 수 있다. 본 문제에서는 고작 4ms 빨라졌다 ㅋㅋ
 
 
 <br>
