--- a/_posts/Algorithm/2021-02-02-BOJ12100.md
+++ b/_posts/Algorithm/2021-02-02-BOJ12100.md
@@ -19,104 +19,112 @@ tags: [ 알고리즘, 백준 ]
 
 이 게임에서 한 번의 이동은 보드 위에 있는 전체 블록을 상하좌우 네 방향 중 하나로 이동시키는 것이다. 이때, 같은 값을 갖는 두 블록이 충돌하면 두 블록은 하나로 합쳐지게 된다. 한 번의 이동에서 이미 합쳐진 블록은 또 다른 블록과 다시 합쳐질 수 없다. (실제 게임에서는 이동을 한 번 할 때마다 블록이 추가되지만, 이 문제에서 블록이 추가되는 경우는 없다)
 
-<div>
-<figure style="float:left;margin:10px;">
+---
+
+<figure style="float:left;margin:0px;width:33%;padding=0">
     <figcaption>그림 1</figcaption>
-    <img src="https://onlinejudgeimages.s3-ap-northeast-1.amazonaws.com/problem/12094/1.png" width="150" height="150">
+    <img src="https://onlinejudgeimages.s3-ap-northeast-1.amazonaws.com/problem/12094/1.png" width="80%">
 </figure>
 
-<figure style="float:left;margin:10px;">
+<figure style="float:left;margin:0px;width:33%;padding=0;">
     <figcaption>그림 2</figcaption>
-    <img src="https://onlinejudgeimages.s3-ap-northeast-1.amazonaws.com/problem/12094/2.png" width="150" height="150">
+    <img src="https://onlinejudgeimages.s3-ap-northeast-1.amazonaws.com/problem/12094/2.png" width="80%">
 </figure>
 
-<figure style="float:left;margin:10px;">
+<figure style="float:left;margin:0px;width:34%;padding=0;padding-bottom:5px;" >
     <figcaption>그림 3</figcaption>
-    <img src="https://onlinejudgeimages.s3-ap-northeast-1.amazonaws.com/problem/12094/3.png" width="150" height="150">
+    <img src="https://onlinejudgeimages.s3-ap-northeast-1.amazonaws.com/problem/12094/3.png" width="80%">
 </figure>
-</div>
-   
+
+---
+
+
 <그림 1>의 경우에서 위로 블록을 이동시키면 <그림 2>의 상태가 된다. 여기서, 왼쪽으로 블록을 이동시키면 <그림 3>의 상태가 된다.
 
-<div>
-<figure style="float:left;margin:10px;">
+---
+
+<figure style="float:left;margin:0px;width:50%;padding=0;">
     <figcaption>그림 4</figcaption>
-    <img src="https://onlinejudgeimages.s3-ap-northeast-1.amazonaws.com/problem/12094/4.png" width="150" height="150">
+    <img src="https://onlinejudgeimages.s3-ap-northeast-1.amazonaws.com/problem/12094/4.png" width="80%">
 </figure>
 
-<figure style="float:left;margin:10px;">
+<figure style="float:left;margin:0px;width:50%;padding=0;">
     <figcaption>그림 5</figcaption>
-    <img src="https://onlinejudgeimages.s3-ap-northeast-1.amazonaws.com/problem/12094/5.png" width="150" height="150">
+    <img src="https://onlinejudgeimages.s3-ap-northeast-1.amazonaws.com/problem/12094/5.png" width="80%">
 </figure>
 </div>
 
 <div>
-<figure style="float:left;margin:10px;">
+<figure style="float:left;margin:0px;width:50%;padding=0;">
     <figcaption>그림 6</figcaption>
-    <img src="https://onlinejudgeimages.s3-ap-northeast-1.amazonaws.com/problem/12094/6.png" width="150" height="150">
+    <img src="https://onlinejudgeimages.s3-ap-northeast-1.amazonaws.com/problem/12094/6.png" width="80%">
 </figure>
 
-<figure style="float:left;margin:10px;">
+<figure style="float:left;margin:0px;width:50%;padding=0;padding-bottom:5px">
     <figcaption>그림 7</figcaption>
-    <img src="https://onlinejudgeimages.s3-ap-northeast-1.amazonaws.com/problem/12094/7.png" width="150" height="150">
+    <img src="https://onlinejudgeimages.s3-ap-northeast-1.amazonaws.com/problem/12094/7.png" width="80%">
 </figure>
-</div>
-			
+
+
+
 <그림 4>의 상태에서 블록을 오른쪽으로 이동시키면 <그림 5>가 되고, 여기서 다시 위로 블록을 이동시키면 <그림 6>이 된다. 여기서 오른쪽으로 블록을 이동시켜 <그림 7>을 만들 수 있다.
 
 <div>
-<figure style="float:left;margin:10px;">
-    <figcaption>그림 7</figcaption>
-    <img src="https://onlinejudgeimages.s3-ap-northeast-1.amazonaws.com/problem/12094/7.png" width="150" height="150">
+<figure style="float:left;margin:0px;width:50%;padding=0;">
+    <figcaption>그림 8</figcaption>
+    <img src="https://onlinejudgeimages.s3-ap-northeast-1.amazonaws.com/problem/12094/7.png" width="80%">
 </figure>
 
-<figure style="float:left;margin:10px;">
-    <figcaption>그림 8</figcaption>
-    <img src="https://onlinejudgeimages.s3-ap-northeast-1.amazonaws.com/problem/12094/8.png" width="150" height="150">
+<figure style="float:left;margin:0px;width:50%;padding=0;">
+    <figcaption>그림 9</figcaption>
+    <img src="https://onlinejudgeimages.s3-ap-northeast-1.amazonaws.com/problem/12094/8.png" width="80%">
 </figure>
-</div>
+
+---
 
 <그림 8>의 상태에서 왼쪽으로 블록을 옮기면 어떻게 될까? 2가 충돌하기 때문에, 4로 합쳐지게 되고 <그림 9>의 상태가 된다.
 
-<div>
-<figure style="float:left;margin:10px;">
+---
+
+<figure style="float:left;margin:0px;width:50%;padding=0;">
     <figcaption>그림 10</figcaption>
-    <img src="https://onlinejudgeimages.s3-ap-northeast-1.amazonaws.com/problem/12094/10.png" width="150" height="150">
+    <img src="https://onlinejudgeimages.s3-ap-northeast-1.amazonaws.com/problem/12094/10.png" width="80%">
 </figure>
 
-<figure style="float:left;margin:10px;">
+<figure style="float:left;margin:0px;width:50%;padding=0;">
     <figcaption>그림 11</figcaption>
-    <img src="https://onlinejudgeimages.s3-ap-northeast-1.amazonaws.com/problem/12094/11.png" width="150" height="150">
+    <img src="https://onlinejudgeimages.s3-ap-northeast-1.amazonaws.com/problem/12094/11.png" width="80%">
 </figure>
-</div>
 
-<div>
-<figure style="float:left;margin:10px;">
+<figure style="float:left;margin:0px;width:50%;padding=0;">
     <figcaption>그림 12</figcaption>
-    <img src="https://onlinejudgeimages.s3-ap-northeast-1.amazonaws.com/problem/12094/12.png" width="150" height="150">
+    <img src="https://onlinejudgeimages.s3-ap-northeast-1.amazonaws.com/problem/12094/12.png" width="80%">
 </figure>
 
-<figure style="float:left;margin:10px;">
+<figure style="float:left;margin:0px;width:50%;padding=0;">
     <figcaption>그림 13</figcaption>
-    <img src="https://onlinejudgeimages.s3-ap-northeast-1.amazonaws.com/problem/12094/13.png" width="150" height="150">
+    <img src="https://onlinejudgeimages.s3-ap-northeast-1.amazonaws.com/problem/12094/13.png" width="80%">
 </figure>
-</div>
+
+---
 
 <그림 10>에서 위로 블록을 이동시키면 <그림 11>의 상태가 된다. 
 
 <그림 12>의 경우에 위로 블록을 이동시키면 <그림 13>의 상태가 되는데, 그 이유는 한 번의 이동에서 이미 합쳐진 블록은 또 합쳐질 수 없기 때문이다.
 
-<div>
-<figure style="float:left;margin:10px;">
+---
+
+<figure style="float:left;margin:0px;width:50%;padding=0;">
     <figcaption>그림 14</figcaption>
-    <img src="https://onlinejudgeimages.s3-ap-northeast-1.amazonaws.com/problem/12094/14.png" width="150" height="150">
+    <img src="https://onlinejudgeimages.s3-ap-northeast-1.amazonaws.com/problem/12094/14.png" width="80%">
 </figure>
 
-<figure style="float:left;margin:10px;">
+<figure style="float:left;margin:0px;width:50%;padding=0;">
     <figcaption>그림 15</figcaption>
-    <img src="https://onlinejudgeimages.s3-ap-northeast-1.amazonaws.com/problem/12094/15.png" width="150" height="150">
+    <img src="https://onlinejudgeimages.s3-ap-northeast-1.amazonaws.com/problem/12094/15.png" width="80%">
 </figure>
-</div>
+
+---
 
 마지막으로, 똑같은 수가 세 개가 있는 경우에는 이동하려고 하는 쪽의 칸이 먼저 합쳐진다. 예를 들어, 위로 이동시키는 경우에는 위쪽에 있는 블록이 먼저 합쳐지게 된다. <그림 14>의 경우에 위로 이동하면 <그림 15>를 만든다.
 
@@ -135,9 +143,12 @@ tags: [ 알고리즘, 백준 ]
 <br>
 
 ## 접근 과정
-1. 
-2. 
+1. 2048 게임의 로직을 직접 구현해야 하는 문제이다. 결과값으로 5번 움직였을 때 최대 값을 구해야하는데 그 횟수가 적고 보드판의 크기도 작아 2048 게임 기능을 구현한 뒤 모든 경우의 수를 하나하나 탐색하여도 시간이 충분할 것이다.
+2. 같은 숫자를 합치는 작업 *mergeTo*와 한쪽 벽으로 숫자들을 붙이는 *attachTo*를 각각 함수로 구현하였으며 처음에 한 방향에 대해서만 구현하다 if로 분기를 나누지 않고도 모든 방향에 적용가능하도록 코드를 수정하였다.
+3. 2048 게임 로직을 완성한 뒤 재귀호출을 통한 완전 탐색을 수행하여 5번 돌렸을 때 최대값을 계산하도록 하였다. *calcMax*
+4. 통과한 이후 *mergeTo*와 *attachTo*에 중복된 코드가 보여 이를 합쳐 *moveTo*라는 동작으로 합쳐주었다.
 
+> 삼항연산자를 사용할 때는 항상 연산자 우선순위를 주의하자.
 
 <br>
 
@@ -170,6 +181,7 @@ void moveTo(int n, board_t& board, int dir) {
                 int& targetPos = dir == UP || dir == DOWN ? board.b[target][fixedAxis] : board.b[fixedAxis][target];
                 if (targetPos == currentPos && canMerge) {
                     if (target != varOffset) {
+                        // Merge
                         targetPos *= 2;
                         currentPos = 0;
                         canMerge = false;
@@ -177,9 +189,11 @@ void moveTo(int n, board_t& board, int dir) {
                 } else {
                     canMerge = true;
                     if (targetPos == 0) {
+                        // Attach
                         targetPos = currentPos;
                         currentPos = 0;
                     } else {
+                        // Attach 할 위치를 보정
                         target = target + (dir == UP || dir == LEFT ? 1 : -1);
                         --varAxis;
                     }
@@ -189,6 +203,7 @@ void moveTo(int n, board_t& board, int dir) {
     }
 }
 
+// 재귀호출을 통한 최대값 탐색
 void calcMax(int n, board_t& board, int count) {
     if (count == 0) {
         for (int y = 0; y < n; ++y) {
