알고리즘문제풀이

--- a/_posts/Algorithm/2021-02-06-BOJ2263.md
+++ b/_posts/Algorithm/2021-02-06-BOJ2263.md
@@ -67,7 +67,7 @@ n개의 정점을 갖는 이진 트리의 정점에 1부터 n까지의 번호가
     4. 왼쪽에 위치한 노드들에 대하여 1번의 과정을 반복한다.
     5. 오른쪽에 위치한 노드들에 대하여 1번의 과정을 반복한다.
 
-이를 재귀호출을 통해 구현하여 통과 할 수 있었다. 다만 실행시간이 꽤 늘어졌는데 이는 위 알고리즘의 2번 과정을 다음과 같이 구현했기 때문이었다.
+이를 재귀호출을 통해 구현하여 통과 할 수 있었다. 다만 실행시간이 꽤 늘어졌는데 이는 위 알고리즘의 2번 루트 노드를 찾는 과정을 다음과 같이 구현했기 때문이었다.
 
 ```c++
 int rootIndex;
