--- a/_posts/Algorithm/2021-02-06-BOJ2263.md
+++ b/_posts/Algorithm/2021-02-06-BOJ2263.md
@@ -76,7 +76,7 @@ for (rootIndex = inBegin; rootIndex < inEnd;  +rootIndex) {
 }
 ```
 
-중위 순회 결과를 하나하나 탐색하며 루트 노드를 찾는데 트리의 모양에 따라 즉시 찾을수도 모든 노드를 탐색해야 찾을 수도 있다. $$O(N\log N)$$의 시간 복잡도가 최악의 경우에는 $$O(N^{2})$$이 될 수도 있는 것이다. 다행히 중위 순회 결과에서 루트 노드의 위치를 찾는 연산을 $$O(1)$$의 시간으로 끝낼 수 있는 방법이 있었다. 이를 통해 실행 시간이 1148ms에서 28ms로 획기적으로 줄어들게 되었다. 다른 사람의 코드를 살펴보니 실행시간이 빠른 사람들은 대부분 똑같은 방법으로 구현하고 있던데 직접 설명하는 것보다 코드를 보며 확인해보면 좋을 것 같다.
+중위 순회 결과를 하나하나 탐색하며 루트 노드를 찾는데 트리의 모양에 따라 즉시 찾을수도 모든 노드를 탐색해야 찾을 수도 있다. $$O(N\log N)$$의 시간 복잡도가 최악의 경우에는 $$O(N^{2})$$이 될 수 있는 것이다. 다행히 중위 순회 결과에서 루트 노드의 위치를 찾는 연산을 $$O(1)$$의 시간으로 해결하는 방법이 있었고 이를 통해 실행 시간이 획기적으로(1148ms -> 28ms) 줄어들게 되었다. 다른 사람의 코드를 살펴보니 실행시간이 빠른 사람들은 대부분 똑같은 방법으로 구현하고 있던데 직접 설명하는 것보다 코드를 보며 확인해보면 좋을 것 같다.
 
 <br>
 
