--- a/_posts/Algorithm/2021-02-15-BOJ17144.md
+++ b/_posts/Algorithm/2021-02-15-BOJ17144.md
@@ -92,7 +92,7 @@ int main() {
 
     unsigned int x, y;
     int board[50][50];
-    int newDusts[50][50] = {{0, }, };
+    int newDusts[50][50] = { };
     int directions[4][2] = {{-1, 0}, {0, 1}, {1, 0}, {0, -1}};    // (y, x)
     
     std::cin >> row >> col >> t;
