알고리즘 문제풀이

--- a/_posts/Algorithm/2021-03-11-BOJ1484.md
+++ b/_posts/Algorithm/2021-03-11-BOJ1484.md
@@ -37,7 +37,7 @@ tags: [ 알고리즘, 백준 ]
 1. 자연수의 집합 중 제곱의 차가 G가 되는 순서쌍을 찾고 그 중 큰 수가 성원이의 현재 몸무게가 된다. 처음엔 어느 범위의 자연수 까지 탐색할지 확인하기 위해 1씩 차이나는 자연수 끼리 제곱차가 G의 최대값이 될 때 까지 계산해보았다. $$n^{2} - (n-1)^{2}$$은 현재 몸무게가 n일 때 가능한 제곱차의 최소값이므로 이 값이 G의 최대 값인 100,000보다 크다면 n 이후의 수는 확인할 필요가 없어진다. 간단한 코드를 통해 확인하였을 때 탐색 해봐야하는 n의 최대 값이 50,000으로 확인되었다.
 
 2. 모든 순서쌍을 확인하기엔 시간내로 확인이 어려울 것이다. 그래서 현재 몸무게 `r`과 기존 몸무게 `l` 순서쌍으로 나타날 수 있는 가장 작은 순서쌍에서 시작하여 제곱차가 G보다 작다면 `r`을 한 칸 이동시키고, G보다 크다면 `l`을 한 칸 이동시켜 일치하는 제곱차가 G와 일치하는 순서쌍을 확인하는식으로 탐색 범위를 줄이도록 구현하였다.
-구현이 꽤나 단순하므로 투포인터 알고리즘에 대한 이해가 있다면 (혹은 없더라도) 코드를 해석하는데 어려움은 없을 것 이다.
+구현이 꽤나 단순하므로 투포인터 알고리즘에 대한 이해가 있다면 (혹은 없더라도) 코드에서 알고리즘의 동작을 파악해볼 수 있으 것이다.
 
 
 <br>
