알고리즘 문제풀이

--- a/_posts/Algorithm/2021-03-14-BOJ7579.md
+++ b/_posts/Algorithm/2021-03-14-BOJ7579.md
@@ -41,7 +41,7 @@ tags: [ 알고리즘, 백준 ]
 
 2. 잘 고민해보니 배낭문제와 비슷한 문제였다. 배낭문제에 대응시키면 비활성화 비용이 물건의 무게이고 메모리가 물건의 가치인 셈. 다만 배낭에 넣은 물건 가치의 합이 최대가 되는 일반적인 배낭문제와 달리 일정 가치가 넘어서는 최소의 무게를 구해야했다. 처음에는 이 부분을 고려하지 않고 DP를 통해 기본적인 배낭문제 풀이와 같이 구현하려고 하다보니 실제로 구해야하는 값인 최소 비용을 얻기가 쉽지 않았다.
 
-3. 대부분의 풀이를 재귀함수를 작성하여 시도하였으나 결과적으로 반복문을 통한 접근으로 해결하였다. 적은 비용 순으로 배낭을 채워나가되 물건의 가치(메모리)가 일정량(limit)을 넘어서면 그 때의 비용이 최소 비용이 된다.
+3. 대부분의 풀이를 재귀함수를 작성하여 시도하였으나 결과적으로 반복문을 통한 접근으로 해결하였다. 적은 비용 순으로 배낭을 채워나가되 물건의 가치(메모리)가 일정량(limit)을 넘어서면 그 때의 비용이 구하고자하는 최소 비용이 된다.
 
 
 <br>
