알고리즘 문제풀이

--- a/_posts/Algorithm/2021-03-26-BOJ12852.md
+++ b/_posts/Algorithm/2021-03-26-BOJ12852.md
@@ -36,7 +36,7 @@ tags: [ 알고리즘, 백준 ]
 <br>
 
 ## **접근 과정**
-혹시 그리드 알고리즘이 적용 가능할까 시도해보았으나 최적의 방법을 찾기가 쉽지 않았다. 그래서 결국 BFS를 통한 그래프 탐색을 구현하는 것으로 방향을 바꾸어 통과하였다. 코드를 여러번 제출하면서 수정되었던 부분은 총 3가지이다.
+혹시 그리디한 탐색이 가능할까 시도해보았으나 최적의 방법을 찾기가 쉽지 않았다. 그래서 결국 BFS를 통한 그래프 탐색을 구현하는 것으로 방향을 바꾸어 통과하였다. 코드를 여러번 제출하면서 수정되었던 부분은 총 3가지이다.
 
 1. 처음 BFS의 구현은 습관인지 별 생각 없이 queue를 사용하여 구현하였는데, 구현 자체에는 문제가 없었지만 제출후 속도가 조금 느렸다(비교적). 거의 다익스트라 알고리즘을 구현하듯한 코드였는데 가만 고민해보니 그래프의 진행 방향이 한 방향(무조건 감소함)이기 때문에 굳이 queue를 쓸 필요가 없이 for문으로 쭉 훑는 방식으로 BFS를 구현하는게 가독성도 좋고 속도도 빨랐다.
 
